Fixed White Bar Behind Say Hello

--- a/styles.css
+++ b/styles.css
@@ -1,198 +1,200 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Zilla Slab', serif;
+	margin: 0;
+	padding: 0;
+	font-family: "Zilla Slab", serif;
+	background-color: #2f5d62;
 }
 
 .banner {
-    width: 100vw;
-    height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(../images/background.jpeg);
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+	width: 100vw;
+	height: 100vh;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+		url(../images/background.jpeg);
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
 }
 
 .navbar {
-    top: 0;
-    width: 100vw;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: fixed;
-    z-index: 1;
-    background-color: black;
-    opacity: .75;
+	top: 0;
+	width: 100vw;
+	margin: auto;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	position: fixed;
+	z-index: 1;
+	background-color: black;
+	opacity: 0.75;
 }
 
 .logo {
-    padding-left: 5%;
-    width: 250px;
-    cursor: pointer;
+	padding-left: 5%;
+	width: 250px;
+	cursor: pointer;
 }
 
 #menu-items {
-    width: 300px;
-    margin-right: 60px;
+	width: 300px;
+	margin-right: 60px;
 }
 
 #menu-items ul {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 #menu-items li {
-    list-style-type: none;
+	list-style-type: none;
 }
 
 /* .navbar ul li { */
-    /* left: 75%; */
-    /* list-style: none; */
-    /* display: inline-block; */
-    /* margin: 0 20px; */
-    /* position: relative; */
+/* left: 75%; */
+/* list-style: none; */
+/* display: inline-block; */
+/* margin: 0 20px; */
+/* position: relative; */
 /* } */
 
 #menu-items li a {
-    text-decoration: none;
-    color: white;
-    text-transform: uppercase;
+	text-decoration: none;
+	color: white;
+	text-transform: uppercase;
 }
 
 #menu-items .nav-menu-item::after {
-    content: '';
-    height: 3px;
-    width: 0;
-    background: white;
-    /* position: absolute;
+	content: "";
+	height: 3px;
+	width: 0;
+	background: white;
+	/* position: absolute;
     left: 0;
     bottom: -10px; */
-    transition: 0.5s;
+	transition: 0.5s;
 }
 
 #menu-items .nav-menu-item:hover::after {
-    width: 10%;
+	width: 10%;
 }
 
 .content {
-    width: 100%;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    text-align: center;
-    color: white;
+	width: 100%;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	text-align: center;
+	color: white;
 }
 
 .content h1 {
-    font-size: 70px;
-    margin-top: 80px;
+	font-size: 70px;
+	margin-top: 80px;
 }
 
 .content p {
-    margin: 20px auto;
-    font-weight: 100;
-    line-height: 25px;
-    font-size: 25px;
+	margin: 20px auto;
+	font-weight: 100;
+	line-height: 25px;
+	font-size: 25px;
 }
 
 button {
-    font-size: 25px;
-    width: 200px;
-    padding: 10px 0;
-    text-align: center;
-    margin: 20px 10px;
-    border-radius: 25px;
-    font-weight: bold;
-    border: 2px solid #2F5D62;
-    background: transparent;
-    color: white;
-    cursor: pointer;
-    position: relative;
-    overflow: hidden;
+	font-size: 25px;
+	width: 200px;
+	padding: 10px 0;
+	text-align: center;
+	margin: 20px 10px;
+	border-radius: 25px;
+	font-weight: bold;
+	border: 2px solid #2f5d62;
+	background: transparent;
+	color: white;
+	cursor: pointer;
+	position: relative;
+	overflow: hidden;
 }
 
 span {
-    background: #2F5D62;
-    height: 100%;
-    width: 0;
-    border-radius: 25px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    z-index: -1;
-    transition: 0.5s;
+	background: #2f5d62;
+	height: 100%;
+	width: 0;
+	border-radius: 25px;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	z-index: -1;
+	transition: 0.5s;
 }
 
 button:hover span {
-    width: 100%;
+	width: 100%;
 }
 
 button:hover {
-    border: none;
+	border: none;
 }
 
 #contact-section {
-    text-align: center;
-    height: 650px;
-    text-transform: uppercase;
-    transition: all 2.5s ease-in-out;
-    background-color: #2F5D62;
+	text-align: center;
+	height: 650px;
+	text-transform: uppercase;
+	transition: all 2.5s ease-in-out;
+	background-color: #2f5d62;
 }
 
 #contact-section h1 {
-    font-size: 60px;
-    line-height: 10px;
-    color: white;
-    background: #2F5D62;
+	font-size: 60px;
+	line-height: 10px;
+	color: white;
+	background: #2f5d62;
 }
 
 #contact-section h2 {
-    padding: 1%;
-    font-size: 20px;
-    color: white;
+	padding: 1%;
+	font-size: 20px;
+	color: white;
 }
 
 form {
-    margin-top: 5%;
-    transition: all 2.5s ease-in-out;
+	margin-top: 5%;
+	transition: all 2.5s ease-in-out;
 }
 
 .form-control {
-    width: 600px;
-    background: transparent;
-    border: none;
-    outline: none;
-    border-bottom: 2px solid #5E8B7E;
-    color: white;
-    font-size: 20px;
-    margin-bottom: 16px;
-    background-color: #2F5D62;
+	width: 600px;
+	background: transparent;
+	border: none;
+	outline: none;
+	border-bottom: 2px solid #5e8b7e;
+	color: white;
+	font-size: 20px;
+	margin-bottom: 16px;
+	background-color: #2f5d62;
 }
 
 input {
-    height: 45px;
+	height: 45px;
 }
 
 form .submit {
-    background-color: #A7C4BC;
-    border-color: transparent;
-    color: white;
-    border: 1px solid black;
-    border-radius: 15px;
-    font-size: 20px;
-    font-weight: bold;
-    letter-spacing: 2px;
-    height: 50px;
-    margin-top: 20px;
+	background-color: #a7c4bc;
+	border-color: transparent;
+	color: white;
+	border: 1px solid black;
+	border-radius: 15px;
+	font-size: 20px;
+	font-weight: bold;
+	letter-spacing: 2px;
+	height: 50px;
+	margin-top: 20px;
 }
 
 form .submit:hover {
-    background-color: #e5f8f3;
-    cursor: pointer;
+	background-color: #e5f8f3;
+	cursor: pointer;
 }
 
 .contact-form {
-    background-color: #2F5D62;
+	background-color: #2f5d62;
 }
